--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
   <script src="src/js/plugins.js"></script>
-  <script src="src/js/script.js"></script>
+  <script src="src/js/scripta.js"></script>
 </body>
 
 </html>
