--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-  <script src="src/js/jquery-1.11.0.min.js"></script>
-
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="src/js/modernizr.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -40,6 +38,8 @@
     crossorigin="anonymous"></script>
   <script src="src/js/plugins.js"></script>
   <script src="src/js/scripta.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
+
 </body>
 
 </html>
