--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
 <body>
   <div id="root"></div>
-  <script src="src/js/jquery-1.11.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.0.js"></script>
+
   <script src="src/js/modernizr.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
