--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
 
   <script src="src/js/modernizr.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jarallax@1.12/dist/jarallax.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chocolat@0.4.21/dist/css/chocolat.css">
+<script src="https://cdn.jsdelivr.net/npm/chocolat@0.4.21/dist/js/jquery.chocolat.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chocolat@0.4.21/dist/css/chocolat.css">
+<script src="https://cdn.jsdelivr.net/npm/chocolat@0.4.21/dist/js/jquery.chocolat.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
   crossorigin="anonymous"></script>
-  <script src="src/js/scripta.js"></script>
+  
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
